---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/useless_parens.nix
+++ tests/data/useless_parens.nix [fixed]
@@ -1,22 +1,22 @@
 let
   # parens around primitives
   a = {
-    b = ("hello");
-    c = (d);
-    e = ({ f = 2; });
+    b = "hello";
+    c = d;
+    e = { f = 2; };
   };
 
   # parens around let-value
-  g = (1 + 2);
-  h = ({ inherit i; });
+  g = 1 + 2;
+  h = { inherit i; };
 
   # LATER: binary exprs, function args etc.
 in
   # parens around let body
-  (null)
+  null
 
   # select in list (parens not necessary)
   [
-    (a.b)
+    a.b
     (a.b or g)
   ]
